--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ IS_README <- TRUE
 
 ## xaringanBuilder <img src="images/hex_sticker.png" align="right" width="200"/>
 
-Build xaringan slides into different formats:
+Build xaringan slides into the following formats:
 
 - html
 - pdf
@@ -38,12 +38,12 @@ remotes::install_github("jhelvy/xaringanBuilder")
 library(xaringanBuilder)
 ```
 
-Build html from Rmd file:
+Build html from Rmd file [view example html slides](https://jhelvy.github.io/xaringanBuilder/example/slides.html):
 ```
 build_html("slides.Rmd")
 ```
 
-Build pdf from Rmd or html file:
+Build pdf from Rmd or html file [view example pdf slides](https://jhelvy.github.io/xaringanBuilder/example/slides.pdf):
 ```
 build_pdf("slides.Rmd")
 build_pdf("slides.html")
@@ -55,14 +55,18 @@ build_gif("slides.Rmd")
 build_gif("slides.html")
 build_gif("slides.pdf")
 ```
+Example:
+<img src="example/slides.gif" width=660>
 
 Build first slide thumbnail from Rmd or html file:
 ```
 build_thumbnail("slides.Rmd")
 build_thumbnail("slides.html")
 ```
+Example:
+<img src="example/slides.png" width=660>
 
-Build html, pdf, gif, and thumbnail of first slide from Rmd file
+Build everything (html, pdf, gif, and thumbnail of first slide) from Rmd file:
 ```
 build_all("slides.Rmd", include = c("html", "pdf", "gif", "thumbnail"))
 ```
