added output_file extension checks

--- a/README.Rmd
+++ b/README.Rmd
@@ -38,12 +38,12 @@ remotes::install_github("jhelvy/xaringanBuilder")
 library(xaringanBuilder)
 ```
 
-Build html from Rmd file [view example html slides](https://jhelvy.github.io/xaringanBuilder/example/slides.html):
+Build html from Rmd file ([view example html slides](https://jhelvy.github.io/xaringanBuilder/example/slides.html)):
 ```
 build_html("slides.Rmd")
 ```
 
-Build pdf from Rmd or html file [view example pdf slides](https://jhelvy.github.io/xaringanBuilder/example/slides.pdf):
+Build pdf from Rmd or html file ([view example pdf slides](https://jhelvy.github.io/xaringanBuilder/example/slides.pdf)):
 ```
 build_pdf("slides.Rmd")
 build_pdf("slides.html")
