--- a/README.Rmd
+++ b/README.Rmd
@@ -72,3 +72,19 @@ Build everything (html, pdf, gif, and thumbnail of first slide) from Rmd file:
 ```
 build_all("slides.Rmd", include = c("html", "pdf", "gif", "thumbnail"))
 ```
+
+## Author, Version, and License Information
+
+- Author: *John Paul Helveston* [www.jhelvy.com](http://www.jhelvy.com/)
+- Date First Written: *September 27, 2020*
+- Most Recent Update: `r format(Sys.Date(), format="%B %d %Y")`
+- License: [MIT](https://github.com/jhelvy/xaringanBuilder/blob/master/LICENSE.md)
+- [Latest Release](https://github.com/jhelvy/xaringanBuilder/releases/latest): 0.0.1
+
+## Citation Information
+
+If you use this package for in a publication, I would greatly appreciate it if you cited it. You can get the citation information by typing `citation("xaringanBuilder")` into R:
+
+```{r}
+citation("xaringanBuilder")
+```
