--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ IS_README <- TRUE
 
 ## xaringanBuilder <img src="man/figures/hex_sticker.png" align="right" width="200"/>
 
-Build xaringan slides into the following formats:
+Build xaringan slides to multiple output formats:
 
 - html
 - pdf
@@ -29,63 +29,116 @@ Build xaringan slides into the following formats:
 
 ## Installation
 
-Install from github:
+You can install the current version of xaringanBuilder from GitHub:
+
 ```
+# install.packages("remotes")
 remotes::install_github("jhelvy/xaringanBuilder")
 ```
 
 ## Usage
+
 ```
 library(xaringanBuilder)
 ```
 
-### All output types
-Build all output types from Rmd file - control outputs with `include` argument:
+The xaringan Rmd files used in all examples below can be found [here](https://github.com/jhelvy/xaringanBuilder/tree/master/inst/example)
+
+### Build All Output Types
+
+Use `build_all()` to build all output types from a Rmd file:
+
 ```
-build_all("slides.Rmd", include = c("html", "pdf", "gif", "pptx", "thumbnail"))
+build_all("slides.Rmd") # Builds every output by default
 ```
 
-### HTML
-Build html from Rmd file ([view example html slides](https://jhelvy.github.io/xaringanBuilder/inst/example/slides.html)):
+Use the `include` or `exclude` arguments to control which output types to include or exclude:
+
+```
+# Both of these build html, pdf, and gif outputs
+build_all("slides.Rmd", include = c("html", "pdf", "gif"))
+build_all("slides.Rmd", exclude = c("pptx", "thumbnail"))
+```
+
+### Build HTML
+
+Build an html file from a Rmd file:
+
 ```
 build_html("slides.Rmd")
 ```
 
-### PDF
-Build pdf from Rmd or html file ([view example pdf slides](https://jhelvy.github.io/xaringanBuilder/inst/example/slides.pdf)):
+### Build PDF
+
+Build a pdf file from a Rmd or html file:
+
 ```
 build_pdf("slides.Rmd")
 build_pdf("slides.html")
 ```
 
-### GIF
-Build gif from Rmd, html, or pdf file:
+### Build GIF
+
+Build a gif file from a Rmd, html, or pdf file:
+
 ```
 build_gif("slides.Rmd")
 build_gif("slides.html")
 build_gif("slides.pdf")
 ```
+
 Example:
 
-<img src="man/figures/slides.gif" width=600>
+<img src="man/figures/slides.gif" width=500>
 
-### PPTX
-Build pptx from Rmd, html or pdf file ([view example pptx slides](https://jhelvy.github.io/xaringanBuilder/inst/example/slides.pptx)):
+### Build PPTX
+
+Build a pptx file from a Rmd, html or pdf file (pptx contains slides of png images of each rendered xaringan slide):
+
 ```
 build_pptx("slides.Rmd")
 build_pptx("slides.html")
 build_pptx("slides.pdf")
 ```
 
-### Thumbnail
-Build first slide png "thumbnail" from Rmd or html file:
+### Build Thumbnail
+
+Build a "thumbnail" png image of the first slide from a Rmd or html file:
+
 ```
 build_thumbnail("slides.Rmd")
 build_thumbnail("slides.html")
 ```
+
 Example:
 
-<img src="man/figures/slides.png" width=600>
+<img src="man/figures/slides.png" width=500>
+
+## "Complex" slides
+
+"Complex" slides are slides that contain [panelsets](https://pkg.garrickadenbuie.com/xaringanExtra/#/panelset) or other html widgets / advanced features that might not render well as a pdf. To render these, set `complex_slides = TRUE` in `build_pdf()`, `build_gif()`, `build_pptx()`, or `build_all()`.
+
+For example:
+
+```
+build_pdf("slides_complex.Rmd", complex_slides = TRUE)
+build_pdf("slides_complex.html", complex_slides = TRUE)
+```
+
+**Note**: This option requires a local installation of Google Chrome as well as the [chromote](https://github.com/rstudio/chromote) package.
+
+## Partial / incremental slides
+
+For pdf, gif, and pptx output types, if you want to build a new slide for each increment on [incremental slides](https://slides.yihui.org/xaringan/incremental.html#1), set `partial_slides = TRUE` in `build_pdf()`, `build_gif()`, `build_pptx()`, or `build_all()`.
+
+For example:
+
+```
+build_pdf("slides.Rmd", partial_slides = TRUE)
+build_pdf("slides.html", partial_slides = TRUE)
+```
+
+**Note**: This option requires a local installation of Google Chrome as well as the [chromote](https://github.com/rstudio/chromote) package.
 
 ## Author, Version, and License Information
 
