updated readme note about Chrome installation requirement

--- a/README.Rmd
+++ b/README.Rmd
@@ -173,6 +173,17 @@ Rmd
              |--> pptx
 ```
 
+## Local Chrome installation requirement
+
+Some build steps require a local installation on Chrome, which may not be available (e.g. on a computing cluster). If you are unable to install Chrome, the recommended workflow is to build intermediate output formats and use an alternative method for the output format that requires Chrome.
+
+For example, to build a pptx from a Rmd file without Chrome, you could:
+
+1. Build the html with `build_html("slides.Rmd")`
+2. Use vscode remote and vscode-preview-server extension to open the html on a local machine (preferrably with Chrome installed)
+3. Save to pdf on Chrome
+4. Build the pptx with `build_pptx("slides.pdf")`
+
 ## Author, Version, and License Information
 
 - Author: *John Paul Helveston* [www.jhelvy.com](http://www.jhelvy.com/)
