--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ IS_README <- TRUE
 ```
 
 <!-- badges: start -->
+[![Lifecycle:
+experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![Travis build status](https://travis-ci.com/jhelvy/xaringanBuilder.svg?branch=master)](https://travis-ci.com/jhelvy/xaringanBuilder)
 <!-- badges: end -->
 
