add reference to slidex in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -92,6 +92,8 @@ build_pptx("slides.html")
 build_pptx("slides.pdf")
 ```
 
+(See the [slidex](https://github.com/datalorax/slidex) package by @datalorax to do the opposite: pptx --> xaringan!)
+
 ### Build Thumbnail
 
 Build a "thumbnail" png image of the first slide from a Rmd or html file (useful for Youtube thumbnail):
