--- a/README.Rmd
+++ b/README.Rmd
@@ -61,21 +61,23 @@ build_html("slides.Rmd")
 
 ### Build PDF
 
-Build a pdf file from a Rmd or html file:
+Build a pdf file from a Rmd or html file, or a url to slides:
 
 ```
 build_pdf("slides.Rmd")
 build_pdf("slides.html")
+build_pdf("http://www.mysite.com/myslides.html")
 ```
 
 ### Build GIF
 
-Build a gif file from a Rmd, html, or pdf file:
+Build a gif file from a Rmd, html, or pdf file, or a url to slides:
 
 ```
 build_gif("slides.Rmd")
 build_gif("slides.html")
 build_gif("slides.pdf")
+build_gif("http://www.mysite.com/myslides.html")
 ```
 
 Example:
@@ -84,23 +86,25 @@ Example:
 
 ### Build PPTX
 
-Build a pptx file from a Rmd, html or pdf file (pptx contains slides of png images of each rendered xaringan slide):
+Build a pptx file from a Rmd, html or pdf file, or a url to slides. The pptx file contains slides of png images of each rendered xaringan slide:
 
 ```
 build_pptx("slides.Rmd")
 build_pptx("slides.html")
 build_pptx("slides.pdf")
+build_pptx("http://www.mysite.com/myslides.html")
 ```
 
 (See the [slidex](https://github.com/datalorax/slidex) package by @datalorax to do the opposite: pptx --> xaringan!)
 
 ### Build Thumbnail
 
-Build a "thumbnail" png image of the first slide from a Rmd or html file (useful for Youtube thumbnail):
+Build a "thumbnail" png image of the first slide from a Rmd or html file, or a url to slides (useful for Youtube thumbnail):
 
 ```
 build_thumbnail("slides.Rmd")
 build_thumbnail("slides.html")
+build_thumbnail("http://www.mysite.com/myslides.html")
 ```
 
 Example:
