added build_png to replace build_thumbnail() to fix part of #15

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,8 +31,8 @@ Build xaringan slides to multiple output formats:
 - pdf
 - gif
 - pptx
-- thumbnail - png of first slide (useful for Youtube thumbnail)
-- social - png of first slide sized for social media sharing (e.g. Twitter)
+- png (convert some or all slides to png files; useful for generating Youtube thumbnails, for example)
+- social: png image of first slide sized for social media sharing (e.g. Twitter)
 
 ## Installation
 
@@ -45,11 +45,19 @@ remotes::install_github("jhelvy/xaringanBuilder")
 
 ## Usage
 
+The xaringan Rmd files used in all examples below can be found [here](https://github.com/jhelvy/xaringanBuilder/tree/master/inst/example)
+
 ```
 library(xaringanBuilder)
 ```
 
-The xaringan Rmd files used in all examples below can be found [here](https://github.com/jhelvy/xaringanBuilder/tree/master/inst/example)
+### Input - Output
+
+All `build_**()` functions use the `input` and `output_file` arguments.
+
+The `input` argument is required and can be a full or local path to the input file (a Rmd, html, or pdf file), or a url to a set of xaringan slides on the web.
+
+The `output_file` argument is optional. It can be a full or local path to the output file, and it must end in an appropriate extension (e.g. `slides.gif` for `build_gif()`).  If it is not provided, the output file name will be determined based on the `input` argument.
 
 ### Build HTML
 
@@ -61,23 +69,25 @@ build_html("slides.Rmd")
 
 ### Build PDF
 
-Build a pdf file from a Rmd or html file, or a url to slides:
+Input can be a Rmd file, html file, or url:
 
 ```
 build_pdf("slides.Rmd")
 build_pdf("slides.html")
-build_pdf("http://www.mysite.com/myslides.html")
+build_pdf("https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.html")
 ```
+
+**Note**: Building the PDF requires a local installation of Google Chrome
 
 ### Build GIF
 
-Build a gif file from a Rmd, html, or pdf file, or a url to slides:
+Input can be a Rmd file, html file, pdf file, or url:
 
 ```
 build_gif("slides.Rmd")
 build_gif("slides.html")
 build_gif("slides.pdf")
-build_gif("http://www.mysite.com/myslides.html")
+build_gif("https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.html")
 ```
 
 Example:
@@ -86,30 +96,40 @@ Example:
 
 ### Build PPTX
 
-Build a pptx file from a Rmd, html or pdf file, or a url to slides. The pptx file contains slides of png images of each rendered xaringan slide:
+Creates a pptx file where each slide contains a png image of each xaringan slide. While you won't be able to edit the xaringan content from Powerpoint, you can at least annotate it.
+
+(See the [slidex](https://github.com/datalorax/slidex) package by @datalorax to do the opposite: pptx --> xaringan!)
+
+Input can be a Rmd file, html file, pdf file, or url:
 
 ```
 build_pptx("slides.Rmd")
 build_pptx("slides.html")
 build_pptx("slides.pdf")
-build_pptx("http://www.mysite.com/myslides.html")
+build_pptx("https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.html")
 ```
 
-(See the [slidex](https://github.com/datalorax/slidex) package by @datalorax to do the opposite: pptx --> xaringan!)
+### Build PNG
 
-### Build Thumbnail
+Build png image(s) of some or all slides. Useful for generating Youtube thumbnails, for example.
 
-Build a "thumbnail" png image of the first slide from a Rmd or html file, or a url to slides (useful for Youtube thumbnail):
+Input can be a Rmd file, html file, pdf file, or url:
 
 ```
-build_thumbnail("slides.Rmd")
-build_thumbnail("slides.html")
-build_thumbnail("http://www.mysite.com/myslides.html")
+# By default, a png of only the first slide is built
+build_png("slides.Rmd")
+build_png("slides.html")
+build_png("slides.pdf")
+build_png("https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.html")
+
+# Build zip file of multiple or all slides
+build_png("slides.pdf", slides = c(1, 3, 5))
+build_png("slides.pdf", slides = "all")
 ```
 
 Example:
 
-<img src="man/figures/slides_thumbnail.png" width=500>
+<img src="man/figures/slides.png" width=500>
 
 ### Build Social
 
@@ -118,6 +138,8 @@ Build a png of the first slide from a Rmd file. Image is sized for sharing on so
 ```
 build_social("slides.Rmd")
 ```
+
+**Note**: This option requires the [chromote](https://github.com/rstudio/chromote) and [pdftools](https://github.com/ropensci/pdftools) packages.
 
 Example:
 
@@ -128,7 +150,8 @@ Example:
 Use `build_all()` to build all output types from a Rmd file:
 
 ```
-build_all("slides.Rmd") # Builds every output by default
+# Builds every output by default
+build_all("slides.Rmd")
 ```
 
 Use the `include` or `exclude` arguments to control which output types to include or exclude:
@@ -136,12 +159,12 @@ Use the `include` or `exclude` arguments to control which output types to includ
 ```
 # Both of these build html, pdf, and gif outputs
 build_all("slides.Rmd", include = c("html", "pdf", "gif"))
-build_all("slides.Rmd", exclude = c("pptx", "thumbnail", "social"))
+build_all("slides.Rmd", exclude = c("pptx", "png", "social"))
 ```
 
 ## "Complex" slides
 
-"Complex" slides are slides that contain [panelsets](https://pkg.garrickadenbuie.com/xaringanExtra/#/panelset) or other html widgets / advanced features that might not render well as a pdf. To render these, set `complex_slides = TRUE` in `build_pdf()`, `build_gif()`, `build_pptx()`, or `build_all()`.
+"Complex" slides are slides that contain [panelsets](https://pkg.garrickadenbuie.com/xaringanExtra/#/panelset) or other html widgets / advanced features that might not render well as a pdf. To render these, set `complex_slides = TRUE` in `build_pdf()`, `build_png()`, `build_gif()`, `build_pptx()`, or `build_all()`.
 
 For example:
 
@@ -150,11 +173,11 @@ build_pdf("slides_complex.Rmd", complex_slides = TRUE)
 build_pdf("slides_complex.html", complex_slides = TRUE)
 ```
 
-**Note**: This option requires a local installation of Google Chrome as well as the [chromote](https://github.com/rstudio/chromote) package.
+**Note**: This option requires the [chromote](https://github.com/rstudio/chromote) and [pdftools](https://github.com/ropensci/pdftools) packages.
 
 ## Partial / incremental slides
 
-For pdf, gif, and pptx output types, if you want to build a new slide for each increment on [incremental slides](https://slides.yihui.org/xaringan/incremental.html#1), set `partial_slides = TRUE` in `build_pdf()`, `build_gif()`, `build_pptx()`, or `build_all()`.
+For pdf, gif, and pptx output types, if you want to build a new slide for each increment on [incremental slides](https://slides.yihui.org/xaringan/incremental.html#1), set `partial_slides = TRUE` in `build_pdf()`, `build_png()`, `build_gif()`, `build_pptx()`, or `build_all()`.
 
 For example:
 
@@ -163,7 +186,7 @@ build_pdf("slides.Rmd", partial_slides = TRUE)
 build_pdf("slides.html", partial_slides = TRUE)
 ```
 
-**Note**: This option requires a local installation of Google Chrome as well as the [chromote](https://github.com/rstudio/chromote) package.
+**Note**: This option requires the [chromote](https://github.com/rstudio/chromote) and [pdftools](https://github.com/ropensci/pdftools) packages.
 
 ## Build hierarchy
 
@@ -176,18 +199,18 @@ Rmd
  |
  |--> html
        |
-       |--> thumbnail (png)
-       |
        |--> pdf
              |
-             |--> gif
-             |
-             |--> pptx
+             |--> png
+                   |
+                   |--> gif
+                   |
+                   |--> pptx
 ```
 
 ## Local Chrome installation requirement
 
-Some build steps require a local installation on Chrome, which may not be available (e.g. on a computing cluster). If you are unable to install Chrome, the recommended workflow is to build intermediate output formats and use an alternative method for the output format that requires Chrome.
+Building the PDF requires a local installation on Chrome, which may not be available (e.g. on a computing cluster). If you are unable to install Chrome, the recommended workflow is to build intermediate output formats and use an alternative method for building the PDF.
 
 For example, to build a pptx from a Rmd file without Chrome, you could:
 
@@ -200,7 +223,7 @@ For example, to build a pptx from a Rmd file without Chrome, you could:
 
 - Author: *John Paul Helveston* [www.jhelvy.com](http://www.jhelvy.com/)
 - Date First Written: *September 27, 2020*
-- Most Recent Update: `r format(Sys.Date(), format="%B %d %Y")`
+- Most Recent Update: `r format(Sys.Date(), format="%B %d, %Y")`
 - License: [MIT](https://github.com/jhelvy/xaringanBuilder/blob/master/LICENSE.md)
 
 ## Citation Information
