added mp4 to build_all()

--- a/README.Rmd
+++ b/README.Rmd
@@ -171,7 +171,7 @@ Use the `include` or `exclude` arguments to control which output types to includ
 ```
 # Both of these build html, pdf, and gif outputs
 build_all("slides.Rmd", include = c("html", "pdf", "gif"))
-build_all("slides.Rmd", exclude = c("pptx", "png", "social"))
+build_all("slides.Rmd", exclude = c("social", "png", "mp4", "pptx"))
 ```
 
 ## "Complex" slides
